# Exercicio_DataEngineering

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pylintrc  README.md  pyproject.toml
.github/workflows/: local-setup-test.yaml
data_transformations/citibike/: distance_transformer.py  ingest.py
data_transformations/wordcount/: word_count_transformer.py
jobs/: citibike_distance_calculation.py  word_count.py
resources/citibike/: citibike.csv  citibike_extension.csv
tests/integration/: conftest.py  test_distance_transformer.py  test_ingest.py  test_validate_spark_environment.py  test_word_count.py
tests/unit/: test_ingest.py
