[tool.poetry]
name = "data_transformations"
version = "0.1.0"
description = "data transformations"
authors = ["ThoughtWorks <info@thoughtworks.com>"]
license = "Apache-License-2.0"

[tool.poetry.dependencies]
numpy = "^1.20.2"
pandas = "^2.0.0"
pyarrow = "^14.0.1"
# This is pinned to stay in sync with the version
# That gets downloaded in `.gitpod.Dockerfile`
python = "~3.11"
pyspark = ">=3.5.0,<4.0.0"

[tool.poetry.dev-dependencies] # Nota: esta seção está obsoleta em Poetry 1.2+. Use groups.
pylint = "^2.8.2"
mypy = "^0.990"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]